intented v0.2.4
+ parser unit tests for if statements and composite expressions
+ use latest fin
+ use latest std
+ first resolver tests
+ first compiler tests
+ moved all js files into /lib

v0.2.3
+ Parser improvements
+ Local expressions are now Local item properties, e.g. let name = "marcus" name.set("marcus westin")
+ Unit testing using nodeunit - a bunch of test cases added for the parser!

v0.2.2
+ File cleanup
+ Upgrade to fin v0.2.11

v0.2.1
+ Fix if/else statement parsing

v0.2.0
+ Publish fun with npm
+ Significantly improved parsing
+ Use latest fin

v0.1.0
+ First versioned version of fun. Lots of stuff works, lots of stuff is hacky, lots of stuff to be done.

TODOs and Roadmap

Get involved - complete a task :)

All expressions should have type:EXPRESSION | INVOCATION | COMPOSITE - each expression should also have a valueType. An alias has the type of what its aliasing. An invocable's signature's argument has the type of what is passed in. A composite has the type of its left operand(?).

--------------

There's ambiguity between
	anInvocation(a + b)
and
	aValue (a + b)

------------

Fix prefixes.
	-3
and
	displayNumber(-2)
work, but 
	for (number in [1,2,3]) { displayNumber(-number) }
does not, nor does
	-number

--------------

- Add valueType to each AST with a value
- No static values!
	let greeting = 'hey'
	greeting
	<button>"shout"</button onclick=handler() { greeting.set('HEY!') }>
- Resolve what a emit value or mutation reference is based on its value type
- Make chat.fun derive global.messages and message.text from the declared classes rather than syntactically
- Add enum type?
	enum State {
		1 happiness
		2 sadness
		3 giddiness
	}
	let aState = new State(1)
	switch(aState) {
		case State.happiness:
		case State.sadness:
	}
	<button>"switch state"</button onclick=handler() { aState.set(State.sadness) }>

- "Write apps"
	1) write an app
	2) write another one
	3) tell the world about them

- "Composite alias values - mouse drag offset"