@@ -130,52 +130,77 @@ var parseDeclarationStatement = astGenerator(function() {
  ************************************************/
 var _expressionOperatorSymbols = ['+','-','*','/','%'], _expressionOperatorKeywords = []
 var parseExpression = function() {
-	return _doParseExpression(_expressionOperatorSymbols, _expressionOperatorKeywords)
+	return _doParseExpression(_expressionOperatorSymbols, _expressionOperatorKeywords, 0)
 }
 
 var _conditionOperatorSymbols = ['<','>','<=','>=','=='], _conditionOperatorKeywords = ['and','or']
 var parseConditionExpression = function() {
-	return _doParseExpression(_conditionOperatorSymbols, _conditionOperatorSymbols)
+	return _doParseExpression(_conditionOperatorSymbols, _conditionOperatorSymbols, 0)
 }
 
-var _doParseExpression = _groupWithParens(function(operatorSymbols, operatorKeywords) {
+var _prefixOperators = '-!~'.split('')
+var _prefixBinding = 70
+
+var _operatorBinding = {
+	'and': 20, 'or': 20,
+	'<':   30, '>':  30, '<=': 30, '>=': 30, '==': 30,
+	'+':   40, '-':  40,
+	'*':   50, '/':  50, '%':  50 }
+
+var _doParseExpression = astGenerator(function(operatorSymbols, operatorKeywords, leftOperatorBinding) {
+	if (!leftOperatorBinding) { leftOperatorBinding = 0 }
 	if (peek('name', JAVASCRIPT_BRIDGE_TOKEN)) { return _parseJavascriptBridge() }
 	if (peek('symbol', '@')) { return _parseItemLiteral() }
 
-	var lValue = _parseRawValueExpression(),
-		operator = '', rValue
+	var parseMore = std.curry(_doParseExpression, operatorSymbols, operatorKeywords),
+		peekOperator = std.curry(_peekOperator, operatorSymbols, operatorKeywords)
 
-	if (peek('symbol', operatorSymbols)) { operator = advance('symbol').value }
-	else if (peek('keyword', operatorKeywords)) { operator = advance('keyword').value }
-
-	if (!operator) { return lValue }
+	if (peek('symbol', _prefixOperators)) {
+		var prefix = advance('symbol').value,
+			value = parseMore(leftOperatorBinding)
+		return { type:'COMPOSITE', prefix:prefix, left:value }
+	}
 	
-	rValue = _doParseExpression(operatorSymbols, operatorKeywords)
-	return { type:'COMPOSITE', left:lValue, operator:operator, right:rValue }
+	if (peek('symbol', L_PAREN)) {
+		advance('symbol', L_PAREN)
+		var expression = parseMore(0)
+		advance('symbol', R_PAREN)
+		return expression
+	}
+
+	var expression = _parseRawValue()
+
+	while (true) {
+		var rightOperator = peekOperator(),
+			rightOperatorBinding = _operatorBinding[rightOperator]
+
+		if (!rightOperator || leftOperatorBinding > rightOperatorBinding) { return expression }
+
+		advance() // the operator
+		expression = { type:'COMPOSITE', operator:rightOperator, left:expression, right:parseMore(rightOperatorBinding) }
+	}
 })
 
-function _groupWithParens(expressionFn) {
-	return function() {
-		var numParens = 0
-		while(peek('symbol', L_PAREN)) { advance('symbol', L_PAREN); numParens += 1 }
-		var value = expressionFn.apply(this, arguments)
-		while(numParens) { advance('symbol', R_PAREN); numParens -= 1 }
-		return value
-	}
+var _peekOperator = function(operatorSymbols, operatorKeywords) {
+	if (peek('symbol', operatorSymbols)) { return peek().value }
+	if (peek('keyword', operatorKeywords)) { return peek().value }
+	return ''
 }
 
-var _parseCompositeExpression = astGenerator(function(lValue) {
-	var operator = advance('symbol').value,
-		rValue = parseExpression()
-	
-	return { type:'COMPOSITE', operator:operator, left:lValue, right:rValue }
-})
+var _parseRawValue = function() {
+	switch (peek().type) {
+		case 'string':
+		case 'number': return _parseStaticValue()
+		case 'name':   return _parseAliasOrInvocation()
+		default:       halt('Unexpected token type "'+peek().type+'"')
+	}
+}
 
 // @-1.currentUser.name
 var _parseItemLiteral = astGenerator(function() {
 	advance('symbol', '@')
-	var idAST = _parseRawValueExpression()
-	assert(idAST.type == 'STATIC' && typeof idAST.value == 'number', 'Item literals need numeric IDs, e.g. @1')
+	var idAST = _parseStaticValue()
+	assert(idAST.valueType == 'number', 'Item literals need numeric IDs, e.g. @1')
 	if (peek('symbol', '.')) {
 		advance('symbol', '.')
 		var namespace = parseNamespace()
@@ -183,30 +208,6 @@ var _parseItemLiteral = astGenerator(function() {
 	}
 	return { type:'ITEM', id:idAST.value }
 })
-
-var _prefixOperators = '-!~'.split('')
-var _parseRawValueExpression = function() {
-	var prefix = (peek('symbol', _prefixOperators) ? advance('symbol').value : null)
-	expression = _doParseRawValueExpression()
-	if (prefix) { expression.prefix = prefix }
-	return expression
-}
-
-var _doParseRawValueExpression = function() {
-	var token = peek()
-	switch(token.type) {
-		case 'number':
-		case 'string': return _parseStaticValue()
-		case 'name':   return _parseAliasOrInvocation()
-		case 'symbol':
-			switch (token.value) {
-				case L_CURLY: return parseObjectLiteral()
-				case L_ARRAY: return parseListLiteral()
-				default:      halt('Unknown symbol "'+token.value+'"')
-			}
-		default:       halt('Unknown value token type "'+token.type+'"')
-	}
-}
 
 var _parseStaticValue = astGenerator(function() {
 	advance(['string','number'])
