@@ -1,5 +1,6 @@
 intented v0.2.4
-+ parser unit tests for if statements and composite expressions
++ operator presedence in parser
++ parser unit tests for if statements, composite expressions, and operator presedence
 + use latest fin
 + use latest std
 + first resolver tests
